--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --build-optimizer --base-href /burger-quiz/",
     "after-deploy": "sh script/afterDeploy.sh",
     "test": "ng test",
     "lint": "ng lint",
